--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "books",
-  "homepage": "https://diana-kot.github.io/ONLY-test-task",
+  "homepage": "https://diana-kot.github.io/book-test-task",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
